<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="24dp"
    android:paddingBottom="20dp"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_add_user_icon"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        >

    </ImageView>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/res_reggmail"
        android:width="200dp"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/id_regGmailtext"
        android:drawableLeft="@drawable/ic_gmail_icon"
        android:drawablePadding="10dp"
        ></EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/res_regusername"
        android:width="200dp"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/regUsertext"
        android:drawableLeft="@drawable/ic_user_icon"
        android:drawablePadding="10dp"
        ></EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/res_regpassword"
        android:width="300dp"
        android:padding="15dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/regPassword"
        android:drawableLeft="@drawable/ic_password_24dp"
        android:drawablePadding="10dp"
        ></EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res_registerbuttion"
        android:width="300dp"
        android:id="@+id/id_regSubmitButton"></Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register Account"
        android:layout_marginTop="30dp"
        android:textSize="20dp" />


</LinearLayout>